--- a/app/src/main/res/layout/activity_charities.xml
+++ b/app/src/main/res/layout/activity_charities.xml
@@ -19,14 +19,12 @@
         tools:visibility="visible"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/charity_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Hello World!"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_charity"
         />
 
 </LinearLayout>
